TASK-72064: DBMaintain. Добавить обработку XML файлов
первая рабочая версия раннера

--- a/dbmaintain/src/main/resources/dbmaintain-default.properties
+++ b/dbmaintain/src/main/resources/dbmaintain-default.properties
@@ -289,3 +289,10 @@ org.dbmaintain.script.parser.ScriptParserFactory.implClassName.db2=org.dbmaintai
 org.dbmaintain.script.parser.ScriptParserFactory.implClassName.mysql=org.dbmaintain.script.parser.impl.MySqlScriptParserFactory
 org.dbmaintain.script.parser.ScriptParserFactory.implClassName.informix=org.dbmaintain.script.parser.impl.InformixScriptParserFactory
 
+
+#ARGUS edition
+#name of function used to load XML
+#function must have 2 parameters
+#file_path - string - relative path to loading file ex. repeatable/xml/myfile.xml
+#file_data - CLOB
+dbMaintainer.LoadXMLRunner.function=
